# Practic_of_KM24M

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: command_registry.py  constants.py  main.py  models.py  parser.py  repository.py  validation.py
test/: commands_test.py  conftest.py
